--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>The Booleaner</title>
     <meta name="author" content="Danilo">
 
+    <!-- Foglio di stile -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
