--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
     <meta name="author" content="Danilo">
 
     <!-- Foglio di stile -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
-
+    <div class="container">
+        <!-- Intestazione -->
+        <header>
+            <div id="logo">
+                <img src="img/logo.svg" alt="logo Booleaner">
+            </div>
+        </header>
+    </div>
 </body>
 
 </html>
