--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html lang="it">
 
 <head>
@@ -20,6 +19,21 @@
                 <img src="img/logo.svg" alt="logo Booleaner">
             </div>
         </header>
+
+        <!-- Parte principale -->
+        <main>
+            <section id="title">
+                <h1>Internet deve essere al servizio del "bene pubblico": il manifesto di Tim Barners Lee</h1>
+                <address>Scritto da <span id="author">The Booleaners</span><br> <span id="date">il 10/10/2020</span>
+                </address>
+            </section>
+
+
+        </main>
+
+
+
+
     </div>
 </body>
 
