added pictures section

--- a/index.html
+++ b/index.html
@@ -28,11 +28,16 @@
                 </address>
             </section>
 
+            <section id="pictures">
+                <div id="tim-barners-lee">
+                    <img src="img/tim-1.jpg" alt="Tim Barners Lee 1">
+                    <img src="img/tim-2.jpg" alt="Tim Barners Lee 2">
+                </div>
+                <div class="description">1st Photo: John S. and James L. Knight Foundation, by Scott Henrichsen <br> 2nd
+                    Photo: Tim Barners Lee, by Paul Clarke</div>
+            </section>
 
         </main>
-
-
-
 
     </div>
 </body>
