added section main body

--- a/index.html
+++ b/index.html
@@ -37,6 +37,76 @@
                     Photo: Tim Barners Lee, by Paul Clarke</div>
             </section>
 
+            <section id="central-body">
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse asperiores molestiae explicabo alias
+                    ab
+                    laudantium neque sed debitis ad repellat aperiam, harum odit dolores dignissimos. <span
+                        class="highlights">Totam
+                        impedit amet
+                        ipsam repellendus.</span>
+                    Possimus iusto consequuntur cupiditate iste similique. Unde possimus labore quam doloremque veniam
+                    officia ipsam id natus, repudiandae reprehenderit ab ex cupiditate fugit, fugiat iure quod omnis
+                    corrupti necessitatibus modi exercitationem.
+                </p>
+                <ul>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, nam corrupti. Dolorum officiis
+                        minima, aperiam doloribus, repellat modi quia esse, vero deleniti eligendi blanditiis temporibus
+                        quisquam ex velit fuga ab?</li>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, nam corrupti. Dolorum officiis
+                        minima, aperiam doloribus, repellat modi quia esse, vero deleniti eligendi blanditiis temporibus
+                        quisquam ex velit fuga ab?</li>
+                    <li>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas, nam corrupti. Dolorum officiis
+                        minima, aperiam doloribus, repellat modi quia esse, vero deleniti eligendi blanditiis temporibus
+                        quisquam ex velit fuga ab?</li>
+                </ul>
+
+                <table>
+                    <thead>
+                        <tr>
+                            <th class="small-cells">Lorem ipsum dolor</th>
+                            <th class="small-cells">Lorem ipsum dolor</th>
+                            <th>Lorem ipsum dolor</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="oddrow">
+                            <td class="small-cells">Lorem ipsum dolor</td>
+                            <td class="small-cells">Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repellendus eaque
+                                temporibus, velit dolore quibusdam laborum similique iste. Ratione rerum sapiente cumque
+                                tenetur exercitationem deleniti! Sint neque quasi tempore beatae!</td>
+                        </tr>
+                        <tr>
+                            <td class="small-cells">Lorem ipsum dolor</td>
+                            <td class="small-cells">Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repellendus eaque
+                                temporibus, velit dolore quibusdam laborum similique iste. Ratione rerum sapiente cumque
+                                tenetur exercitationem deleniti! Sint neque quasi tempore beatae!</td>
+                        </tr>
+                        <tr class="oddrow">
+                            <td class="small-cells">Lorem ipsum dolor</td>
+                            <td class="small-cells">Lorem ipsum dolor</td>
+                            <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus repellendus eaque
+                                temporibus, velit dolore quibusdam laborum similique iste. Ratione rerum sapiente cumque
+                                tenetur exercitationem deleniti! Sint neque quasi tempore beatae!</td>
+                        </tr>
+                    </tbody>
+                </table>
+
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse asperiores molestiae explicabo alias
+                    ab
+                    laudantium neque sed debitis ad repellat aperiam, harum odit dolores dignissimos. <span
+                        class="highlights">Totam
+                        impedit amet
+                        ipsam repellendus.</span>
+                    Possimus iusto consequuntur cupiditate iste similique. Unde possimus labore quam doloremque veniam
+                    officia ipsam id natus, repudiandae reprehenderit ab ex cupiditate fugit, fugiat iure quod omnis
+                    corrupti necessitatibus modi exercitationem.
+                </p>
+            </section>
+
         </main>
 
     </div>
