added curiosities section

--- a/index.html
+++ b/index.html
@@ -107,6 +107,16 @@
                 </p>
             </section>
 
+            <section id="curiosities">
+                <h2> Potrebbero interessarti</h2>
+                <div class="curiosity-img first-img">
+                    Lorem Ipsum Dolor
+                </div>
+                <div class="curiosity-img second-img">
+                    Lorem Ipsum Dolor
+                </div>
+            </section>
+
         </main>
 
     </div>
